--- a/src/components/standalone/side-panel/standalone-side-panel.css
+++ b/src/components/standalone/side-panel/standalone-side-panel.css
@@ -1,4 +1,5 @@
 #side-panel-wrapper {
+  height: calc(100vh - 53px);
   min-width: 22.5rem;
   max-width: 22.5rem;
   overflow-y: scroll;
